# gms

./: AGENTS.md  Cargo.toml  README.md  ROADMAP-FUTURE.md
src/: adaptive_buffer.rs  bridge.rs  compiler.rs  compression.rs  hardware.rs  lib.rs  mps_bridge.rs  multi_gpu_runtime.rs  render_benchmark.rs  scene_workload.rs  scheduler.rs  snapshot_compressor.rs  test_cuda.rs  tuning.rs
src/hal/: cuda.rs  dummies.rs  metal.rs  mod.rs  vulkan.rs
